--- a/mern/client/src/components/Symbols/Squiggle.css
+++ b/mern/client/src/components/Symbols/Squiggle.css
@@ -1,6 +1,44 @@
 .Squiggle {
-  width: 80px;
-  height: 120px;
+  display: flex;
+  flex-direction: column;
+  margin: 0px;
+  transform: rotateY(40deg) rotateZ(50deg);
+}
+
+.Row {
+  display: flex;
+  flex-direction: row;
+  margin: 0px;
+}
+
+#RowBot {
+  margin-left: 50px;
+}
+
+.Squiggle1 {
+  width: 50px;
+  height: 50px;
   background: #a84909;
-  border-radius: 50%;
+  border-radius: 100% 0% 0% 100%;
+}
+
+.Squiggle2 {
+  width: 50px;
+  height: 50px;
+  background: #a84909;
+  border-radius: 0% 100% 0% 0%;
+}
+
+.Squiggle3 {
+  width: 50px;
+  height: 50px;
+  background: #a84909;
+  border-radius: 0% 0% 0% 100%;
+}
+
+.Squiggle4 {
+  width: 50px;
+  height: 50px;
+  background: #a84909;
+  border-radius: 0% 100% 100% 0%;
 }
