--- a/mern/client/src/components/Symbols/Oval.css
+++ b/mern/client/src/components/Symbols/Oval.css
@@ -3,14 +3,28 @@
   height: 120px;
   border-radius: 50%;
   transform: rotateY(20deg);
+  z-index: 5;
 }
 
 #Red-Empty {
   border: 4px solid red;
 }
-/* need to work on this */
+
 #Red-Lines {
   border: 4px solid red;
+}
+
+#Red-Lines::before {
+  content: "____ _____ _____ _____ _____ ___"; /* your dots */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; /* stretches the before element over the entire surface of the main element */
+  z-index: -1; /* places the ::before element underneath the main div content, as a background */
+  padding-left: 6px; /* letter-spacing adds px after letter, use padding at the beginning to off set it to remain centered. */
+  font-size: 30px;
+  color: red;
+  line-height: 0px;
 }
 
 #Red-Solid {
@@ -20,9 +34,22 @@
 #Green-Empty {
   border: 4px solid green;
 }
-/* need to work on this */
+
 #Green-Lines {
   border: 4px solid green;
+}
+
+#Green-Lines::before {
+  content: "____ _____ _____ _____ _____ ___"; /* your dots */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; /* stretches the before element over the entire surface of the main element */
+  z-index: -1; /* places the ::before element underneath the main div content, as a background */
+  padding-left: 6px; /* letter-spacing adds px after letter, use padding at the beginning to off set it to remain centered. */
+  font-size: 30px;
+  color: green;
+  line-height: 0px;
 }
 
 #Green-Solid {
@@ -32,9 +59,22 @@
 #Purple-Empty {
   border: 4px solid purple;
 }
-/* need to work on this */
+
 #Purple-Lines {
   border: 4px solid purple;
+}
+
+#Purple-Lines::before {
+  content: "____ _____ _____ _____ _____ ___"; /* your dots */
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0; /* stretches the before element over the entire surface of the main element */
+  z-index: -1; /* places the ::before element underneath the main div content, as a background */
+  padding-left: 6px; /* letter-spacing adds px after letter, use padding at the beginning to off set it to remain centered. */
+  font-size: 30px;
+  color: purple;
+  line-height: 0px;
 }
 
 #Purple-Solid {
