--- a/mern/client/src/components/Symbols/Diamond.css
+++ b/mern/client/src/components/Symbols/Diamond.css
@@ -1,59 +1,49 @@
-.Diamond {
+#Diamond-Red-Empty {
   width: 95px;
   height: 95px;
   transform: rotateY(55deg) rotateZ(45deg);
-}
-
-#Diamond-Red-Blank {
   border: 5px solid red;
 }
 
-#Diamond-Red-Lines {
-  border: 5px solid red;
-}
-
-#Diamond-Red-Lines::before {
-  content: "____ ______  _____ ___";
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0; /* stretches the before element over the entire surface of the main element */
-  z-index: -1; /* places the ::before element underneath the main div content, as a background */
-  padding-left: 6px; /* letter-spacing adds px after letter, use padding at the beginning to off set it to remain centered. */
-  font-size: 30px;
-  color: red;
-  line-height: 0px;
-  /* transform: rotateY(60deg); */
-}
-
-#Oval-Purple-Solid {
-  background: purple;
-}
-
-#Diamond-Red-Filled {
+#Diamond-Red-Solid {
+  width: 95px;
+  height: 95px;
+  transform: rotateY(55deg) rotateZ(45deg);
   background-color: red;
 }
 
-#Diamond-Green-Blank {
+#Diamond-Green-Empty {
+  width: 95px;
+  height: 95px;
+  transform: rotateY(55deg) rotateZ(45deg);
   border: 5px solid green;
 }
-/* need to work on this */
+
 #Diamond-Green-Lines {
   border: 5px solid green;
 }
 
-#Diamond-Green-Filled {
+#Diamond-Green-Solid {
+  width: 95px;
+  height: 95px;
+  transform: rotateY(55deg) rotateZ(45deg);
   background: green;
 }
 
-#Diamond-Purple-Blank {
+#Diamond-Purple-Empty {
+  width: 95px;
+  height: 95px;
+  transform: rotateY(55deg) rotateZ(45deg);
   border: 5px solid purple;
 }
-/* need to work on this */
+
 #Diamond-Purple-Lines {
   border: 5px solid purple;
 }
 
-#Diamond-Purple-Filled {
+#Diamond-Purple-Solid {
+  width: 95px;
+  height: 95px;
+  transform: rotateY(55deg) rotateZ(45deg);
   background: purple;
 }
