add select card highlite

--- a/mern/client/src/components/Card.css
+++ b/mern/client/src/components/Card.css
@@ -8,11 +8,12 @@
   margin: 15px;
 }
 
+#selectedCard {
+  border-color: yellow;
+  border-style: solid;
+}
+
 .CardSymbol {
   display: flex;
   align-items: center;
 }
-
-/* #selected {
-  border-color: yellow;
-} */
