move gameboard to center

--- a/mern/client/src/components/Card.css
+++ b/mern/client/src/components/Card.css
@@ -6,6 +6,7 @@
   border-radius: 20px;
   justify-content: center;
   margin: 15px;
+  background-color: white;
 }
 
 #selectedCard {
@@ -14,7 +15,7 @@
 }
 
 #hintCard {
-  border-color: rgb(54, 251, 10);
+  border-color: rgb(139, 10, 251);
   border-style: solid;
 }
 
