--- a/mern/client/src/components/GameBoard.css
+++ b/mern/client/src/components/GameBoard.css
@@ -1,7 +1,8 @@
-.Gameboard {
+.GameBoard {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  background-color: rgb(11, 255, 247);
 }
 
 .CardRow {
