--- a/mern/client/src/App.css
+++ b/mern/client/src/App.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: rgb(11, 255, 247);
+  min-height: 100vh;
 }
 
 .App-logo {
