--- a/mern/client/src/components/GameBoard.css
+++ b/mern/client/src/components/GameBoard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background-color: rgb(11, 255, 247);
+  background-color: rgb(0, 241, 24);
 }
 
 .CardRow {
@@ -16,4 +16,10 @@
 
 .Alerts {
   padding: 5px;
+}
+
+.Stats {
+  background-color: rgb(11, 255, 247);
+  padding: 20px;
+  font-size: 30px;
 }
