fix selected card border sizing and made it more noticeable

--- a/mern/client/src/components/Card.css
+++ b/mern/client/src/components/Card.css
@@ -7,10 +7,11 @@
   justify-content: center;
   margin: 15px;
   background-color: white;
+  box-sizing: border-box;
 }
 
 #selectedCard {
-  border-color: yellow;
+  border-color: red;
   border-style: solid;
 }
 
