--- a/mern/client/src/components/GameBoard.css
+++ b/mern/client/src/components/GameBoard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  background-color: rgb(0, 241, 24);
+  background-color: purple;
 }
 
 .CardRow {
@@ -16,6 +16,10 @@
 
 .Alerts {
   padding: 5px;
+}
+
+.ButtonContainer {
+  font-size: 30px;
 }
 
 .Stats {
